fixed bug with atomic mask initialization, output time changed to duration per iteration, added compiler optimization

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,5 +16,6 @@ set_target_properties(${PROJECT_NAME} PROPERTIES
             CXX_EXTENSIONS ON
             )
 set(PROJECT_LIB ${PROJECT_NAME}_lib)
+set(CMAKE_CXX_FLAGS "-Og")
 
 #add_subdirectory(test)
