O2 optimization, startCentroidsObtainer dependency inversion was made for future tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,6 @@ set_target_properties(${PROJECT_NAME} PROPERTIES
             CXX_EXTENSIONS ON
             )
 set(PROJECT_LIB ${PROJECT_NAME}_lib)
-set(CMAKE_CXX_FLAGS "-Og")
+set(CMAKE_CXX_FLAGS "-O2")
 
 #add_subdirectory(test)
