--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -7,6 +7,7 @@ include_directories(${GTEST_INCLUDE_DIR})
 
 add_executable(${PROJECT_NAME}
     ../headers/parser.hpp
+    ../sources/k_means.cpp
     main.cpp
 )
 
