added Ofast optimization, added -n flag for not to check file while inspecting it on the first initialization loop

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,10 +13,9 @@ target_link_libraries(${PROJECT_NAME} pthread)
 
 set_target_properties(${PROJECT_NAME} PROPERTIES
             CXX_STANDARD 11
-            CXX_EXTENSIONS ON
             )
 set(PROJECT_LIB ${PROJECT_NAME}_lib)
-set(CMAKE_CXX_FLAGS "-O2")
+set(CMAKE_CXX_FLAGS "-Ofast")
 
 find_package(GTest)
 if(GTest_FOUND)
