--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,3 +5,7 @@ sonar.host.url=https://sonarcloud.io
 sonar.login=c974b6d6de3a5843f66ca425162945838377f5ae
 sonar.cxx.cppcheck.reportPath=cppcheck-report.xml
 sonar.cfamily.build-wrapper-output=build_local/build_wrapper
+
+sonar.cxx.xunit.reportPath=build_local/test/gtest.xml
+
+sonar.exclusions=test/*.cpp
